src/test/ui/issues/issue-47486-2.stderr
error[E0282]: type annotations needed
  --> $DIR/issue-47486-2.rs:2:31
   |
LL |     [0u8; std::mem::size_of::<_>()];
   |                               ^ cannot infer type

error: aborting due to previous error

For more information about this error, try `rustc --explain E0282`.
