src/test/ui/issues/issue-47486-2.rs
fn main() {
    [0u8; std::mem::size_of::<_>()]; //~ ERROR: type annotations needed
}
